1999-02-26  Hippo

        * fvwm/virtual.c: EdgeThickness command can be used at any time to alter
        the panframe windows. Panframe windows unmapped when paging to the end
        page and wrapping is disabled.  Panframe windows go right into the corners.

	* fvwm/placement.c: fixed wandering on restart/recapture caused by
	old_bw being ignored.

1999-02-25  Paul D. Smith  <psmith@gnu.org>

	* configure.in: Updated for 2.2.1.
	* NEWS: Updated for 2.2.1.

1999-02-22  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/fvwm2.1 (WindowsDesk): some clarification that this command has
	gone.
	(QuitScreen): entry added.

	* sample.fvwmrc/new-features: corrected module path

	* fvwm/fvwm2.1 (Popup): Corrected typo (double-click-action ->
	default-action).
	(Read): Put braces around optional parameter
	(SetAnimations): dito
	(SnapAttraction): dito
	(UpdateDecor): dito
	(ColormapFocus): removed braces around required argument

	* sample.fvwmrc/Makefile.am (EXTRA_DIST): added new-features

1999-02-19  Dominik Vogt  <dominik_vogt@hp.com>

	* configure.in: Updated for 2.2

	* NEWS: updated for 2.2

	* fvwm/fvwm2.1: swapped 'Read' and 'Recapture'

1999-02-18  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/menus.c (FPopupMenu): use menu style of parent menu for popup
	offset instead of own menu style.

Wed Feb 17 08:24:46 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Clear cache variables relating to
	--with-{xpm,rplay,readline}-* options so the presence of these
	libraries will always be recomputed.  This avoids the problem of
	not finding the library (or finding the wrong one) if configure is
	re-run with different options.

1999-02-17  Dominik Vogt  <dominik_vogt@hp.com>

	* configure.in: updated for 2.1.14

1999-02-16  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/bindings.c (ParseBindEntry): Specifying 'any' modifier and
	specific modifiers together in a key binding made the whole binding
	fail to work

1999-02-15  Dominik Vogt  <dominik_vogt@hp.com>
