@@ -1,5 +1,7 @@
 1999-02-26  Hippo
 
+        * fvwm/builtins.c: Emulate command updates feedback window position.
+
         * fvwm/virtual.c: EdgeThickness command can be used at any time to alter
         the panframe windows. Panframe windows unmapped when paging to the end
         page and wrapping is disabled.  Panframe windows go right into the corners.
